--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lnurl-rs"
 version = "0.1.5"
-edition = "2021"
+edition = "2018"
 authors = ["Ben Carman <benthecarman@live.com>"]
 license = "MIT"
 homepage = "https://github.com/benthecarman/lnurl-rs/"
@@ -9,7 +9,7 @@ repository = "https://github.com/benthecarman/lnurl-rs/"
 readme = "README.md"
 documentation = "https://docs.rs/lnurl-rs/"
 description = "A basic LNURL implementation in Rust"
-keywords = ["lightning", "bitcoin"]
+keywords = ["lightning", "bitcoin", "lnurl"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -22,19 +22,23 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bech32 = "0.9.1"
 bitcoin_hashes = { version = "0.11", default-features = false }
-bitcoin = { version = "0.29.2", features = ["serde"] }
+bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
-lightning-invoice = { version = "0.21.0", default-features = false }
+lightning-invoice = { version = "0.22.0", default-features = false }
 email_address = "0.2.4"
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
+bitcoin = { version = "0.29.2", features = ["serde", "std"] }
+lightning-invoice = { version = "0.22.0", features = ["std"] }
+# zip versions after 0.6.3 don't work with our MSRV 1.57.0
+zip = "=0.6.3"
+# base64ct versions at 1.6.0 and higher have MSRV 1.60.0
+base64ct = "<1.6.0"
 
 [features]
-default = ["blocking", "async", "async-https", "lightning-invoice/default"]
+default = ["blocking", "async", "async-https"]
 blocking = ["ureq", "ureq/socks"]
 async = ["reqwest", "reqwest/socks"]
 async-https = ["reqwest/default-tls"]
-std = ["lightning-invoice/std"]
-no-std = ["lightning-invoice/no-std"]
