Make async-https require async

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,4 +41,4 @@ base64ct = "<1.6.0"
 default = ["blocking", "async", "async-https"]
 blocking = ["ureq", "ureq/socks"]
 async = ["reqwest", "reqwest/socks"]
-async-https = ["reqwest/default-tls"]
+async-https = ["reqwest/default-tls", "async"]
