--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ name = "lnurl"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = "1.0.70"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bech32 = "0.9.1"
@@ -27,6 +28,7 @@ ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
 lightning-invoice = { version = "0.23.0", default-features = false, features = ["serde"] }
 email_address = "0.2.4"
+url = "2.3.1"
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
