--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,14 +26,14 @@ bitcoin_hashes = { version = "0.12.0", default-features = false }
 bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
-lightning-invoice = { version = "0.23.0", default-features = false, features = ["serde"] }
+lightning-invoice = { version = "0.24.0-alpha1", default-features = false, features = ["serde"] }
 email_address = "0.2.4"
 url = "2.3.1"
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
 bitcoin = { version = "0.29.2", features = ["serde", "std"] }
-lightning-invoice = { version = "0.23.0", features = ["std", "serde"] }
+lightning-invoice = { version = "0.24.0-alpha1", features = ["std", "serde"] }
 # zip versions after 0.6.3 don't work with our MSRV 1.57.0
 zip = "=0.6.3"
 # base64ct versions at 1.6.0 and higher have MSRV 1.60.0
