--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
 lightning-invoice = { version = "0.24.0-alpha1", default-features = false, features = ["serde"] }
+nostr = { version = "=0.22.0-bitcoin-v0.29", default-features = false }
 email_address = "0.2.4"
 url = "2.3.1"
 
