Add success actions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,10 @@ bitcoin = { version = "0.29.2", default-features = false, features = ["serde"] }
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
 email_address = "0.2.4"
-url = "2.3.1"
+url = { version = "2.3.1", features = ["serde"] }
+base64 = "0.13.1"
+cbc = { version = "0.1", features = ["alloc"] }
+aes = { version = "0.8" }
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
