--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ anyhow = "1.0.70"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 bech32 = "0.11"
-bitcoin = { version = "0.30.2", default-features = false, features = ["no-std", "serde", "rand"] }
+bitcoin = { version = ">=0.30.2 <0.33.0", default-features = false, features = ["no-std", "serde", "rand"] }
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.12.3", optional = true, default-features = false, features = ["json"] }
 email_address = "=0.2.5"
@@ -33,7 +33,7 @@ aes = { version = "0.8" }
 
 [dev-dependencies]
 tokio = { version = "1.20.1", features = ["full"] }
-bitcoin = { version = "0.30.2", features = ["serde", "std"] }
+bitcoin = { version = ">=0.30.2 <0.33.0", features = ["serde", "std"] }
 lightning-invoice = { version = "0.27.0", features = ["std", "serde"] }
 nostr = { version = "0.25.0", default-features = false, features = ["std"] }
 
