Add async-https-rustls feature

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,3 +42,4 @@ default = ["blocking", "async", "async-https"]
 blocking = ["ureq", "ureq/socks"]
 async = ["reqwest", "reqwest/socks"]
 async-https = ["reqwest/default-tls", "async"]
+async-https-rustls = ["reqwest/rustls-tls", "async"]
